--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
     "supertest": "^6.3.3"
